--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==0.8.4
+blinker==1.4
 coverage==4.0.3
 Flask==0.10.1
+Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
 Flask-Migrate==1.7.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
