--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ coverage==4.0.3
 Flask==0.10.1
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
+Flask-Markdown==0.3
 Flask-Migrate==1.7.0
+Flask-PageDown==0.2.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
+Markdown==2.6.5
 MarkupSafe==0.23
 pytz==2015.7
 requests==2.9.1
