--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flask-vuejs-blog",
   "version": "0.0.0",
-  "description": "A simple blog with avue.js frontend and a flask rest api backend.",
+  "description": "A simple blog with vue.js frontend and a flask rest api backend.",
   "main": "index.js",
   "scripts": {
     "test": "test"
@@ -21,8 +21,8 @@
     "url": "https://github.com/dasdachs/flask-blog/issues"
   },
   "dependencies": {
-    "vue": "~1.0.26",
-    "vue-router": "~0.7.13",
+    "vue": "~2.0",
+    "vue-router": "~2.0",
     "vue-resource": "~0.9.3"
   }
 }
