--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,28 @@
-alembic==0.8.8
+alembic==1.1.0
 aniso8601==1.2.0
-click==6.6
-Flask==0.11.1
-Flask-Migrate==2.0.0
-Flask-RESTful==0.3.5
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
-itsdangerous==0.24
-Jinja2==2.8
+atomicwrites==1.3.0
+attrs==19.1.0
+Click==7.0
+Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.4.0
+importlib-metadata==0.20
+itsdangerous==1.1.0
+Jinja2==2.10.1
 Mako==1.0.4
-MarkupSafe==0.23
-mysqlclient==1.3.9
-py==1.4.31
-pytest==3.0.3
-python-dateutil==2.5.3
-python-editor==1.0.1
-pytz==2016.7
-six==1.10.0
-SQLAlchemy==1.1.3
-Werkzeug==0.11.11
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+packaging==19.1
+pluggy==0.12.0
+py==1.8.0
+pyparsing==2.4.2
+pytest==5.1.2
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2019.2
+six==1.12.0
+SQLAlchemy==1.3.8
+wcwidth==0.1.7
+Werkzeug==0.15.6
+zipp==0.6.0
